# NovaCrypt

./: CMakeLists.txt  LICENSE  LICENSE .md  README.md  main.cpp  novacrypt.cpp  novacrypt.hpp
